<resources>
    <string name="app_name">CMAS</string>
    <string name="yuk_join">Yuk Join!</string>

    // Dummy
    <string name="dummyName">Ardena Afif Pratama</string>
    <string name="dummyGender">Laki - laki</string>

    // Onboarding
    <string name="chat">Apakah kamu merasa stres?</string>
    <string name="find">Cari Konsultan?</string>
    <string name="scan">Pindai Wajahmu</string>

    <string name="chat_desc">Ayo, ceritakan permasalahanmu sekarang. Chatbot kami siap membantu kamu dan memberikan dukungan yang tepat.</string>
    <string name="find_desc">Rekomendasi lokasi konsultan, rumah sakit, dan psikiater terdekat dari lokasimu. </string>
    <string name="scan_desc">Dengan hanya memindai wajah Anda, aplikasi akan menganalisis pola EEG dan memberikan informasi yang relevan terkait kesehatan mental Anda.</string>

    <string name="home">Home</string>
    <string name="location">Cek Lokasi</string>
    <string name="chatbot">Chatbot</string>
    <string name="article">Artikel</string>
    <string name="notification">Notifikasi</string>
    <string name="profile">Profil</string>

    // Location
    <string name="please_activate_location_message">Yuk aktifkan fitur lokasi di hp mu</string>

    // Auth
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="havent_account">Kamu belum daftar?</string>
    <string name="sign_up">Yuk daftar</string>
    <string name="already_have_account">Kamu udah punya akun?</string>
    <string name="yuk_masuk">Yuk Masuk</string>
    <string name="email_error_message">Email tidak valid</string>
    <string name="password_minimum_character">Password minimal 8 karakter</string>
    <string name="password_confirm_message">Konfirmasi password harus sama</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="auth_error_message">Cek email dan password dengan benar</string>

    <string name="edit_profile">Edit Profil</string>
    <string name="change_password">Ubah Password</string>
    <string name="logout">Keluar</string>
    <string name="about_us">Tentang Kami</string>
    <string name="contact_us">Hubungi Kami</string>

    <string name="about_us_desc">Aplikasi CMAS (Cari, Menerima, Antisipasi, Sembuh) merupakan sebuah inisiatif yang bertujuan untuk mengatasi masalah kesehatan mental di Indonesia. Menyadari tingginya angka prevalensi masalah kesehatan mental dan depresi di negara ini, kami ingin memberikan solusi dengan menyediakan aksesibilitas yang lebih luas bagi masyarakat. CMAS hadir dengan visi untuk menghilangkan stigma negatif terkait dengan masalah kesehatan mental, karena kami percaya bahwa tidak ada yang seharusnya malu dalam menghadapinya. Melalui aplikasi ini, kami menyediakan informasi dan sumber daya yang berguna tentang cara menghadapi dan mengelola masalah kesehatan mental, terutama dalam hal kecemasan dan depresi. Dengan demikian, CMAS bertujuan untuk memberikan dukungan yang dibutuhkan kepada individu dan mempromosikan pemahaman yang lebih baik tentang kesehatan mental di Indonesia.</string>


    // Home
    <string name="hello">Halo sobat CMAS 👋</string>
    <string name="welcome">Selamat datang di CMAS! Kami ada untuk kesehatan mental Anda. Kami siap membantu kamu dalam perjalanan melawan depresi.</string>
    <string name="scan_description">Hai Sobat CMAS! Silahkan Foto Wajah untuk cek tingkat Depresi anda</string>
    <string name="cek_yuk">Cek Yuk</string>
    <string name="online">Online</string>
    <string name="bot_name">EmoWell</string>

    // Emotion
    <string name="happy">Wah, senang sekali melihatmu begitu ceria!</string>
    <string name="happy_desc">Jaga mood positifmu ya. Senang adalah perasaan gembira dan puas dengan situasi menyenangkan.</string>

    <string name="sad">Aduh sedih..</string>
    <string name="sad_desc">Aduh, sedih ya. Jangan khawatir, setiap orang mengalami sedih. Ingat, kamu tidak sendirian.</string>

    <string name="scared">Ih.. takut</string>
    <string name="scared_desc">Jangan takut! Ketakutan adalah hal yang normal. Kamu lebih kuat daripada yang kamu kira.</string>

    <string name="disgust">Hmm, kok risih</string>
    <string name="disgust_desc">Risih ya? Setiap orang memiliki preferensi berbeda. Jujurlah pada dirimu sendiri dan temukan lingkungan yang nyaman.</string>


    <string name="angry">Aaargh, marah!</string>
    <string name="angry_desc">Marah adalah emosi normal. Kelola kemarahan dengan bijaksana dan cari solusi yang konstruktif.</string>

    <string name="normal">Hari - harimu lancar</string>
    <string name="normal_desc">Hari-harimu lancar dan biasa-biasa saja. Nikmati momen-momen sederhana dalam hidupmu.</string>

    <string name="nothing_emo">Siapa kamu?</string>
    <string name="nothing_emo_desc">Scan wajahmu dulu yuk, agar kami bisa mengenali kamu</string>
    <string name="ok">OK</string>
    <string name="read_more">Baca lainnya</string>
    <string name="cek_skizophrenia">Cek Skizo</string>
    <string name="siap">Siap</string>
    <string name="on_progress_desc">Fitur ini masih dalam tahap pengembangan. Yuk pantau terus fitur terbaru kami, jangan sampai tidak merasakan.</string>
    <string name="coming_soon">Segera Hadir</string>
    <string name="sample_message">This is a sample message that will appear</string>
    <string name="ketik_pesan">Ketik pesan</string>
    <string name="emowel_desc">EmoWell siap mendengarkan cerita tetang kesehatan mentalmu</string>
    <string name="yuk_cerita_desc">Yuk ceritakan masalah mentalmu ke EmoWell</string>
    <string name="kamu_punya_masalah">Kamu punya masalah?</string>

    // Data Artikel
    <integer-array name="id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>

    <string-array name="data_judul">
        <item>Apa itu kecemasan?</item>
        <item>Apa itu depresi?</item>
        <item>Apa itu stress?</item>
        <item>Apa itu serangan panik?</item>
        <item>Apa itu cyberbullying?</item>

    </string-array>

    <string-array name="data_pengertian">
        <item>Cemas adalah perasaan yang timbul ketika kita khawatir atau takut akan sesuatu. Rasa takut dan panik adalah hal yang manusiawi. Setelah beberapa waktu, kita biasanya merasa lebih tenang dan nyaman.\n\n Rasa khawatir dan takut, dalam batasan tertentu, dapat membantu menjaga kita, bahkan melindungi dari marabahaya. Akan tetapi, ada kalanya, rasa cemas membuat keadaan terasa lebih buruk dari yang sebenarnya dan membuat kita kewalahan. Kekhawatiran yang berlangsung berkepanjangan dapat menyebabkan kecemasan yang berjangka panjang.</item>

        <item>Depresi adalah salah satu bentuk kondisi kesehatan mental yang dialami banyak orang dan sering kali muncul berbarengan dengan kecemasan. Depresi bisa ringan dan sementara, atau berat dan berkepanjangan. Ada orang-orang yang mengalami depresi hanya sekali dalam hidupnya; ada pula yang mengalaminya berkali-kali.\n Depresi bisa berujung pada tindak bunuh diri, tetapi hal ini bisa dicegah dengan dukungan yang tepat. Penting untuk mengetahui bahwa ada banyak hal yang bisa dilakukan untuk membantu anak-anak muda yang memiliki dorongan untuk melakukan tindakan ini.</item>

        <item>Stres adalah perasaan yang umumnya dapat kita rasakan saat berada di bawah tekanan, merasa kewalahan, atau kesulitan menghadapi suatu situasi. Stres dalam batas tertentu bisa berdampak positif dan memotivasi kita untuk mencapai suatu tujuan, seperti mengerjakan tes atau berpidato. Namun, stres yang berlebihan, apalagi jika terasa sulit dikendalikan, dapat berdampak negatif terhadap suasana hati, kesehatan fisik dan mental, dan hubungan kita dengan orang lain.</item>

        <item>Serangan panik adalah rasa takut dan cemas yang bisa tiba-tiba membuat kita kewalahan dan biasanya diiringi dengan gejala fisik lainnya yang akut, seperti napas tersengal-sengal, dan jantung berdegup kencang. \nBagi banyak anak yang mengalami serangan ini, mereka juga merasakan teror, seolah suatu peristiwa buruk akan terjadi. Perasaan ini dapat muncul meskipun mereka tidak benar-benar berada dalam bahaya.</item>

        <item>Cyberbullying (perundungan dunia maya) ialah bullying/perundungan dengan menggunakan teknologi digital. Hal ini dapat terjadi di media sosial, platform chatting, platform bermain game, dan ponsel. Adapun menurut Think Before Text, cyberbullying adalah perilaku agresif dan bertujuan yang dilakukan suatu kelompok atau individu, menggunakan media elektronik, secara berulang-ulang dari waktu ke waktu, terhadap seseorang yang dianggap tidak mudah melakukan perlawanan atas tindakan tersebut. Jadi, terdapat perbedaan kekuatan antara pelaku dan korban. Perbedaan kekuatan dalam hal ini merujuk pada sebuah persepsi kapasitas fisik dan mental.</item>
    </string-array>

    <string-array name="data_penyebab">
        <item>Sulit untuk mengenali satu penyebab utama dari kecemasan. Ketika menghadapi situasi yang menimbulkan stres, akan ada semacam alarm peringatan yang menyala di otak kita dan menandakan ada sesuatu yang tidak beres dan perlu kita hadapi. Supaya situasi sulit ini lekas berakhir, otak kita akan membuat kita lebih waspada, fokus hanya pada situasi itu, bahkan memompa lebih banyak darah ke kaki agar kita dapat melarikan diri.</item>

        <item>Depresi bisa terjadi sebagai reaksi terhadap suatu peristiwa, misalnya penganiayaan, kekerasan di sekolah, kematian orang terdekat, atau masalah keluarga seperti kekerasan di dalam rumah tangga ataupun perpisahan orang tua. Seseorang bisa mengalami depresi setelah merasa stres untuk waktu yang lama. Depresi juga bisa diturunkan di dalam keluarga. Selain itu, ada kalanya kita tidak tahu mengapa depresi timbul.</item>

        <item>Pengalaman menghadapi stres pada anak tidak selalu sama dengan orang dewasa. . Di kalangan orang dewasa, stres terkait pekerjaan sangat umum terjadi. Namun, bagi anak, stres terjadi ketika mereka tidak bisa menghadapi situasi yang mengandung ancaman, situasi sulit, atau situasi yang menyakitkan, antara lain: \nPikiran atau perasaan negatif tentang diri sendiri\nPerubahan fisik, misalnya permulaan pubertas\nBeban belajar, misalnya ulangan atau bertambahnya pekerjaan rumah seiring waktu\nMasalah dengan teman di sekolah atau lingkungan sosial\nPerubahan besar, seperti pindah rumah, pindah sekolah, atau perpisahan orang tua\nPenyakit kronis, masalah keuangan di keluarga, atau kematian orang terdekat\nSituasi rumah atau lingkungan sekitar yang tidak aman\n</item>

        <item>Penyebab serangan panik tidak selalu jelas, baik pada anak-anak maupun orang dewasa. Yang diketahui, kepanikan dapat dipicu oleh rasa cemas tentang sesuatu atau saat sedang mengalami situasi sulit dan stres, antara lain: \nCemas karena ada pengalaman tidak menyenangkan di rumah atau sekolah\nStres karena ujian sekolah, masalah pada hubungan pertemanan atau dengan orang terdekat lainya\nKematian orang terdekat\nPengalaman mengerikan, seperti penganiayaan atau penelantaran\nPengalaman yang melibatkan kekerasan\n</item>

        <item>Apa itu cyberbullying?</item>
    </string-array>

    <string-array name="data_gejala">
        <item>Apa itu kecemasan?</item>
        <item>Apa itu kecemasan?</item>
        <item>Apa itu serangan panik?</item>
        <item>Apa itu cyberbullying?</item>
        <item>Airbus A319neo</item>
    </string-array>
</resources>
