<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="400dp"
    app:cardCornerRadius="30dp"
    android:backgroundTint="@color/white"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="19dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_emo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/scared"
            android:scaleType="centerCrop"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scared"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/blue_500"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scared_desc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="12dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>